add vaadin-grid for tabls

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -45,6 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
+<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-grid.html">
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="looper-page/looper-toolbar.html">
 <link rel="import" href="looper-page/looper-notification-bar.html">
