--- a/src/page-market.html
+++ b/src/page-market.html
@@ -100,7 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         dataSelection: {
           type: String,
-          value: "fills"
+          value: "myorders"
         }
       };
     }
