use table in markets page

--- a/src/market/recent-orders.html
+++ b/src/market/recent-orders.html
@@ -1,13 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="recent-orders" fit>
     <template>
         <style include="shared-styles">
          :host {
             display: block;
         }
-
-      
         </style>
         <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/orders.json" handle-as="json" last-response="{{resp}}"></iron-ajax>
         <!-- The array is set as the <vaadin-grid>'s "items" property -->
@@ -38,7 +35,9 @@
             </vaadin-grid-column>
             <vaadin-grid-column width="20px">
                 <template class="header">STATUS</template>
-                <template><iron-icon icon="menu"></iron-icon></template>
+                <template>
+                    <iron-icon icon="menu"></iron-icon>
+                </template>
             </vaadin-grid-column>
         </vaadin-grid>
     </template>
