--- a/src/my-app.html
+++ b/src/my-app.html
@@ -46,16 +46,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../bower_components/vaadin-material-theme/vaadin-grid.html">
+<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-button.html">
+<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-checkbox.html">
+<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-text-field.html">
+<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-date-picker.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
-<!-- <link rel="import" href="../bower_components/vaadin-button/vaadin-button.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-progress-bar/vaadin-progress-bar"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-checkbox/vaadin-checkbox.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-text-field/vaadin-text-field.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-radio-button/vaadin-radio-button.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-combo-box/vaadin-combo-box.html"> -->
-<!-- <link rel="import" href="../bower_components/vaadin-date-picker/vaadin-date-picker.html"> -->
-
+<link rel="import" href="../bower_components/vaadin-button/vaadin-button.html">
+<link rel="import" href="../bower_components/vaadin-progress-bar/vaadin-progress-bar.html">
+<link rel="import" href="../bower_components/vaadin-checkbox/vaadin-checkbox.html">
+<link rel="import" href="../bower_components/vaadin-text-field/vaadin-text-field.html">
+<link rel="import" href="../bower_components/vaadin-radio-button/vaadin-radio-button.html">
+<link rel="import" href="../bower_components/vaadin-combo-box/vaadin-combo-box.html">
+<link rel="import" href="../bower_components/vaadin-date-picker/vaadin-date-picker.html">
+<link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="looper-page/looper-toolbar.html">
 <link rel="import" href="looper-page/looper-notification-bar.html">
