Switch back to highchart, fix footer alignment, add global-variable (#19)

--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -30,7 +30,7 @@
       <a href="#/markets" active$="[[isActiveTab('markets')]]" styleless>
         <paper-button noink>Markets</paper-button>
       </a>
-      <a href="#/wallet" active$="[[isActiveTab('wallet')]]" styleless>
+      <a id="walletlink" href="#/wallet" active$="[[isActiveTab('wallet')]]" styleless>
         <paper-button noink>Wallet</paper-button>
       </a>
       <a href="#/rings" active$="[[isActiveTab('rings')]]" styleless>
