--- a/src/page-market.html
+++ b/src/page-market.html
@@ -15,6 +15,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="market/order-book.html">
 <link rel="import" href="market/recent-fills.html">
 <link rel="import" href="market/recent-orders.html">
+<script src="../bower_components/highstock/highstock.js"></script>
+<!-- <script src="../bower_components/highcharts/highcharts-more.js"></script> -->
 <dom-module id="page-market">
   <template>
     <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
