--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -39,16 +39,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @apply --layout-center;
       @apply --layout-vertical;
       @apply --layout-flex;
-      background-color: #eeeeee;
       width: 100%;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      min-height: 80vh;
+      font-weight: 400;
     }
 
-    .sections>paper-card {
+    .sections > paper-card {
       width: 100%;
-      margin: 8px 0 8px 0;
+      margin: 16px 0 8px 0;
     }
 
     .sections>paper-card[transparent] {
