--- a/src/wallet/subpage-ready.html
+++ b/src/wallet/subpage-ready.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<dom-module id="page-wallet-ready" fit>
+<dom-module id="subpage-ready" fit>
   <template>
     <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
     <style include="shared-styles">
@@ -202,14 +202,14 @@
       </paper-card>
   </template>
   <script>
-  class PageMyWalletReady extends Polymer.Element {
-    static get is() { return 'page-wallet-ready'; }
+  class SubpageReady extends Polymer.Element {
+    static get is() { return 'subpage-ready'; }
 
     static get properties() {
       return {};
     }
   }
 
-  window.customElements.define(PageMyWalletReady.is, PageMyWalletReady);
+  window.customElements.define(SubpageReady.is, SubpageReady);
   </script>
 </dom-module>
