--- a/src/market/candlestick-chart.html
+++ b/src/market/candlestick-chart.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../../bower_components/vaadin-charts/vaadin-charts.html">
 <dom-module id="candlestick-chart" fit>
   <template>
     <style include="shared-styles">
@@ -7,30 +6,14 @@
       display: block;
     }
 
-    .wrapper {
-      height: 480px;
+    #container {
+      height: 400px;
       min-width: 1000px;
     }
     </style>
+    <iron-ajax auto handle-as="json" url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/candleTick.json" last-response="{{resp}}"></iron-ajax>
     <div class="wrapper">
-      <iron-ajax auto id="dataFetcher" url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/candleTick.json" handle-as="json" last-response="{{resp}}"></iron-ajax>
-      <vaadin-candlestick-chart id="candlestick-series" timeline>
-        <chart-title>AAPL Stock Price</chart-title>
-        <range-selector selected="1">
-        </range-selector>
-        <data-series name="AAPL Stock Price" data="[[resp.result]]">
-          <data-grouping>
-            <units>
-              <name>week</name>
-              <multiples>[3]</multiples>
-            </units>
-            <units>
-              <name>month</name>
-              <multiples>[1, 2, 3, 4, 6]</multiples>
-            </units>
-          </data-grouping>
-        </data-series>
-      </vaadin-candlestick-chart>
+      <div id="container"></div>
     </div>
   </template>
   <script>
@@ -39,8 +22,108 @@
 
     static get properties() {
       return {
-
+        resp: {
+          type: Object,
+          observer: '_respChanged'
+        }
       };
+    }
+
+    _respChanged(resp) {
+      // console.log(e.detail.response.result);
+      var data = resp.result;
+      // split the data set into ohlc and volume
+      var ohlc = [],
+        volume = [],
+        dataLength = data.length,
+        // set the allowed units for data grouping
+        groupingUnits = [
+          [
+            'week', // unit name
+            [1] // allowed multiples
+          ],
+          [
+            'month', [1, 2, 3, 4, 6]
+          ]
+        ],
+
+        i = 0;
+
+      for (i; i < dataLength; i += 1) {
+        ohlc.push([
+          data[i][0], // the date
+          data[i][1], // open
+          data[i][2], // high
+          data[i][3], // low
+          data[i][4] // close
+        ]);
+
+        volume.push([
+          data[i][0], // the date
+          data[i][5] // the volume
+        ]);
+      }
+
+
+      // create the chart
+      Highcharts.stockChart(this.$.container, {
+
+        rangeSelector: {
+          selected: 1
+        },
+
+        title: {
+          text: 'AAPL Historical'
+        },
+
+        yAxis: [{
+          labels: {
+            align: 'right',
+            x: -3
+          },
+          title: {
+            text: 'OHLC'
+          },
+          height: '60%',
+          lineWidth: 2,
+          resize: {
+            enabled: true
+          }
+        }, {
+          labels: {
+            align: 'right',
+            x: -3
+          },
+          title: {
+            text: 'Volume'
+          },
+          top: '65%',
+          height: '35%',
+          offset: 0,
+          lineWidth: 2
+        }],
+
+        tooltip: {
+          split: true
+        },
+
+        series: [{
+          type: 'candlestick',
+          name: 'AAPL',
+          data: ohlc,
+          dataGrouping: {
+            units: groupingUnits
+          }
+        }, {
+          type: 'column',
+          name: 'Volume',
+          data: volume,
+          yAxis: 1,
+          dataGrouping: {
+            units: groupingUnits
+          }
+        }]
+      });
     }
   }
 
